# VDO.MultiCh.Comms

./: .gitignore  README.md
.github/workflows/: release.yml
app/: build-meta.json  main.js  package-lock.json  package.json  preload.js
app/native/: binding.gyp  coreaudio.mm  package-lock.json  package.json
app/renderer/: app.js  index.html
app/scripts/: bump-build.js
app/spatial/: channelModel.js  controlApi.js  spatialMixer.js
app/ui/: index.html
docs/: development.md  direct-channels-plan.md  handoff.md  known-issues.md  self-hosting.md  spatial-architecture.md  usage.md
docs/superpowers/plans/: 2026-06-02-docs-refresh.md  2026-06-02-github-actions-release.md
docs/superpowers/specs/: 2026-06-02-docs-refresh-design.md  2026-06-02-github-actions-release-design.md
shim/: Cargo.toml
shim/src/: audio.rs  main.rs
test/: binaural-poc.html
