[package]
name = "vdo-multichan-shim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shim"
path = "src/main.rs"

[dependencies]
cpal = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ringbuf = "0.3"
anyhow = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
